Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-4763

HTML compiler produces invalid HTML document

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • None
    • 0.13.0
    • HTML - Compiler
    • None

    Description

      Steps to reproduce:

      1. Create an simpl thrift file like the following:
        service MyService {}
      2. generate the HTML documentation for it via thrift -gen html MyService.thrift

      The HTML compiler generates the following invalid stream:

      <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
      {{ "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">}}
      <html xmlns="http://www.w3.org/1999/xhtml">
      <head>
      <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
      <link href="style.css" rel="stylesheet" type="text/css"/>
      <title>Thrift module: test</title></head><body>
      <div class="container-fluid">
      <h1>Thrift module: test</h1>
      <table class="table-bordered table-striped table-condensed"><thead><th>Module</th><th>Services</th><th>Data types</th><th>Constants</th></thead>
      <tr>
      <td>test</td><td><a href="#Svc_MyService">MyService</a><br/>
      <ul>
      </ul>
      </td>
      <td></td>
      <td></code></td>
      </tr></table>
      <hr/><h2 id="Services">Services</h2>
      <h3 id="Svc_MyService">Service: MyService</h3>
      </div></body></html>

      Attachments

        Issue Links

          Activity

            People

              jking3 James E. King III
              sebastian.zenker Sebastian Zenker
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 20m
                  20m