THRIFT-4763: HTML compiler produces invalid HTML document (#1720)

* HTML: the html generator did generate a closing </code> tag without a match <code>
* THRIFT-4763: added HTML test and fixed up additional HTML generation issues